--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ crashlytics-build.properties
 Basics/001 Conventions and Syntax/.idea/.idea.001 Conventions and Syntax.dir/.idea/
 
 Unity/ColorMatch Game/.idea/.idea.ColorMatch Game/.idea/
+Unit8Lab/Assets/Course Library/
