Started the Unit 9 Lab

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ Basics/001 Conventions and Syntax/.idea/.idea.001 Conventions and Syntax.dir/.id
 
 Unity/ColorMatch Game/.idea/.idea.ColorMatch Game/.idea/
 Unit8Lab/Assets/Course Library/
+
+Unit9Lab/Assets/Course Library/
+
+Unit9Lab/Assets/Prototype 3 - Starter Files/
