Finished Unit 9 Challenge

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,15 @@ Unit8Lab/Assets/Course Library/
 Unit9Lab/Assets/Course Library/
 
 Unit9Lab/Assets/Prototype 3 - Starter Files/
+
+Unit9Challenge/Assets/Challenge 3/Sound/
+
+Unit9Challenge/Assets/Challenge 3/Prefabs/
+
+Unit9Challenge/Assets/Challenge 3/Instructions/
+
+Unit9Challenge/Assets/Challenge 3/_Source_Files/
+
+Unit9Challenge/Assets/Challenge 3 - Direct Download/
+
+Unit9Challenge/Assets/Course Library/
