Finished Unit 10 Lab

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ Unit9Challenge/Assets/Challenge 3/_Source_Files/
 Unit9Challenge/Assets/Challenge 3 - Direct Download/
 
 Unit9Challenge/Assets/Course Library/
+
+Unit10Lab/Assets/Course Library/
