Finished Unit 11 Lab

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,37 @@ Unit9Challenge/Assets/Challenge 3 - Direct Download/
 Unit9Challenge/Assets/Course Library/
 
 Unit10Lab/Assets/Course Library/
+
+Unit11Lab/Assets/Course Library/
+
+Unit11Lab/Assets/Prefabs/
+
+Unit11Lab/Assets/Scenes/
+
+Unit11Lab/Assets/TextMesh Pro/
+
+Unit11Lab/ProjectSettings/
+
+Unit11Lab/Assets/TextMesh Pro.meta
+
+Unit11Lab/Packages/manifest.json
+
+Unit11Lab/Packages/packages-lock.json
+
+Unit11Lab/UserSettings/EditorUserSettings.asset
+
+Unit11Lab/UserSettings/Search.settings
+
+Unit11Lab/Assets/Course Library.meta
+
+Unit11Lab/Assets/Prefabs.meta
+
+Unit11Lab/Assets/Prototype 5 - Direct Download.meta
+
+Unit11Lab/Assets/Prototype 5 - Direct Download/Prototype-5_Starter-Files.unitypackage.meta
+
+Unit11Lab/Assets/Scenes.meta
+
+Unit11Lab/Assets/Scripts.meta
+
+Unit11Lab/.vsconfig
